--- a/msvc-norma/src/main/resources/application.properties
+++ b/msvc-norma/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=msvc-norma
 server.port=8070
 spring.datasource.url=jdbc:mysql://localhost:3306/msvc_norma
 spring.datasource.username=root
-spring.datasource.password=150803
+spring.datasource.password=wdmfF341100$
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
