--- a/msvc-venta/src/main/resources/application.properties
+++ b/msvc-venta/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8020
 
 spring.datasource.url = jdbc:mysql://localhost:3306/msvc_venta
 spring.datasource.username = root
-spring.datasource.password =150803
+spring.datasource.password =wdmfF341100$
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
