--- a/msvc-cobro/src/main/resources/application.properties
+++ b/msvc-cobro/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8050
 
 spring.datasource.url = jdbc:mysql://localhost:3306/msvc_cobro
 spring.datasource.username = root
-spring.datasource.password = wdmfF341100$
+spring.datasource.password = 14031879
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
