--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <module>msvc-propiedades</module>
         <module>msvc-capania</module>
         <module>msvc-cobro</module>
+        <module>msvc-usuarios</module>
+
 
     </modules>
     <properties>
@@ -34,6 +36,4 @@
         <maven.compiler.target>24</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-
 </project>
