--- a/msvc-usuarios/src/main/resources/application.properties
+++ b/msvc-usuarios/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8040
 
 spring.datasource.url = jdbc:mysql://localhost:3306/msvc_usuarios
 spring.datasource.username = root
-spring.datasource.password = 14031879
+spring.datasource.password = wdmfF341100$
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
