--- a/msvc-preventa/pom.xml
+++ b/msvc-preventa/pom.xml
@@ -62,7 +62,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.inmobiliaria.springcloud.msvc.propiedades</groupId>
+            <artifactId>msvc-propiedades</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.inmobiliaria.springcloud.msvc.propiedades</groupId>
+            <artifactId>msvc-propiedades</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
